# foodplan

./: .codeclimate.yml  .flake8  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: checks.yml
backend/: .coveragerc  .flake8  .isort.cfg  conftest.py  mypy.ini  pytest.ini  setup.cfg
backend/apps/carts/: admin.py  models.py  selectors.py  services.py
backend/apps/carts/migrations/: 0001_add_cart_model.py
backend/apps/core/: apps.py  models.py
backend/apps/favorites/: admin.py  apps.py  models.py
backend/apps/favorites/migrations/: 0001_add_model_favorites.py
backend/apps/recipes/: apps.py
backend/apps/recipes/admin/: __init__.py  ingredient.py  recipe.py
backend/apps/recipes/api/: permissions.py
backend/apps/recipes/managers/: __init__.py  recipe.py
backend/apps/recipes/migrations/: 0001_add_ingredient_model.py  0002_update_verbose_name_to_ingredient_model.py  0003_add_recipe_model.py  0004_add_recipe_sorting_by_name.py  0005_add_recipe_sorting_by_creation_date.py
backend/apps/recipes/models/: __init__.py  ingredient.py  recipes.py
backend/apps/recipes/selectors/: recipe.py
backend/apps/recipes/services/: __init__.py  recipe.py
backend/apps/tags/: admin.py  apps.py  models.py
backend/apps/tags/api/: serializers.py  viewsets.py
backend/apps/tags/migrations/: 0001_add_tag_model.py  0002_change_verbose_name.py
backend/apps/users/: admin.py  forms.py  models.py  selectors.py  services.py
backend/apps/users/api/: serializers.py  viewsets.py
backend/apps/users/migrations/: 0001_add_customuser_model.py  0001_initial.py  0002_add_follow_by_field.py  0003_rename_follow_by_field.py  0004_rename_followers_field.py
backend/config/: routers.py  settings.py  urls.py
backend/config/settings/: __init__.py  api.py  auth.py  base.py  boilerplate.py  db.py  debug_toolbar.py  environs.py  http.py  i18n.py  installed_apps.py  media.py  static.py
backend/docker/django/: Dockerfile  gunicorn.sh  wait_db.sh
backend/tests/factories/: __init__.py  cart_factory.py  favorites_factory.py  ingredient_factory.py  mixins.py  recipe_factory.py  tag_factory.py  user_factory.py
backend/tests/test_api/: test_user_create.py
docker/backend/: Dockerfile
docs/: openapi-schema.yml
frontend/: Dockerfile
frontend/src/api/: index.js
nginx/: Dockerfile  nginx.conf
scripts/: init.sh
(+34 files in other folders)
