[tool.poetry]
name = "foodplan"
version = "0.1.0"
description = ""
authors = ["savilard <vitaliyantonoff@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.16.1"
mypy = "^0.961"
black = "^22.6.0"
django-extensions = "^3.2.0"
flake8-django = "^1.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
